minor improvements for the register section

--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,15 @@
     @apply text-foreground min-h-screen bg-[#181818];
   }
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
